# JustDoIt

./: .claude-prompt.txt  .gitignore  CLAUDE.md  README.md  justdoit.py  pyproject.toml
.claude/: a_iso1-task.md  research-session-prompt.md  settings.local.json
.claude/hooks/: README.md  post-edit-test.sh
.github/: copilot-instructions.md  python-instructions.md
docs/: ANIMATION_GALLERY_PLAN.md  ANIMATION_VARIANTS_BACKLOG.md  HIGH_DENSITY_RENDER.md  IMPLEMENTATION_PLAN_SIZE_SCALE.md  REFACTOR.md  RENDERING_ARCHITECTURE.md  SIZE_SCALE_RESOLUTION.md  VISION.md  _config.yml  animation-gallery.md  animation_gallery.md  index.md  sound_design.md  star_trek_effects.md
docs/anim_gallery/: A01-typewriter.apng  A01-typewriter.cast  A02-scanline.apng  A02-scanline.cast  A03-glitch.apng  A03-glitch.cast  A03a-neon-cyan.apng  A03a-neon-cyan.cast  A03b-neon-magenta.apng  (+91 more)
effects/: spatial.py
justdoit/: __init__.py  cli.py  layout.py
scripts/: debug_pipeline.py  demo.py  demo_animate.py  download_google_fonts.py  generate_4k_anim.py  generate_anim_gallery.py  generate_font_gallery.py  generate_gallery.py
tests/: test_animate.py  test_bloom.py  test_bloom_pulse.py  test_char_db.py  test_cli.py  test_color_c11.py  test_figlet.py  test_fill.py  test_flame_bloom.py  test_flame_float_grid.py  test_flame_iso_bloom.py  test_fractal_classic.py  test_gallery_profiles.py  test_generative.py  test_gradient.py  test_image_pipeline.py  test_image_sampler.py  test_iso_depth_breathe.py  test_iso_neon_glitch.py  test_isometric.py  test_layout.py  test_living_color.py  test_living_fill.py  test_lsystem.py  test_noise_warp.py  test_output_apng.py  test_output_cast.py  test_output_targets.py  test_plasma_bloom.py  test_plasma_flame.py  test_plasma_lava_lamp.py  test_plasma_noise_warp.py  test_plasma_warp.py  test_reaction_diffusion.py  test_recursive.py  test_shape_fill.py  test_showcase.py  test_slime_mold.py  test_slime_mold_anim.py  test_sound_player.py  (+12 more)
(+102 files in other folders)
